feat:stabilize documents with JDK 17 : EXO-60550 (#584) (#593)
add necessary configuration arglines